# gyverlamp

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  Justfile  NOTICE  README.md  extra_script.py  platformio.ini  platformio.local.example.ini
.github/workflows/: sim-pages.yml
.opencode/skills/create-empty-effect/: SKILL.md
sim/: .gitignore  CMakeLists.txt  README.md
sim/common/: sim_runtime.cpp  sim_runtime.h  sim_time.cpp  sim_time.h
sim/host/shims/: Arduino.h  EEPROM.h  FastLED.h  config.h  shared.h
sim/host/src/: host_led.cpp  sim_audio_input.cpp  sim_audio_input.h  sim_stubs.cpp
sim/wasm/: README.md  build.sh  exported_functions.txt
sim/wasm/src/: wasm_main.cpp
sim/web/: package-lock.json  package.json  server.js
sim/web/public/: app.js  index.html
src/: config.h  main.cpp
src/audio/: audio_config.h  audio_frame.h  audio_modulation.cpp  audio_modulation.h  audio_service.cpp  audio_service.h
src/core/: auto_off_config.h  frame_renderer.cpp  frame_renderer.h  lamp.cpp  lamp.h  power_controller.cpp  power_controller.h  quiet_hours_config.h  rotation_controller.cpp  rotation_controller.h  rotation_mode.h  rotation_presets.h  state_notifier.h
src/effect/: catalog.cpp  catalog.h  controller.cpp  controller.h  effect.h  effects.h  ids.h  math.cpp  math.h  palette_catalog.cpp  palette_catalog.h  palette_ids.h  palette_utils.cpp  palette_utils.h  palettes.cpp  palettes.h  settings.h  shared.cpp  shared.h
src/effect/catalog/: butterflys.cpp  butterflys.h  clock.cpp  clock.h  color.cpp  color.h  color_change.cpp  color_change.h  equalizer.cpp  equalizer.h  fire.cpp  fire.h  gradient.cpp  gradient.h  liquid_lamp.cpp  liquid_lamp.h  matrix.cpp  matrix.h  nexus.cpp  nexus.h  noise.cpp  noise.h  northern_lights.cpp  northern_lights.h  octopus.cpp  octopus.h  paintball.cpp  paintball.h  picasso.cpp  picasso.h  rainbow.cpp  rainbow.h  shadows.cpp  shadows.h  snowstorm.cpp  snowstorm.h  spiral.cpp  spiral.h  thunderstorm.cpp  thunderstorm.h  (+4 more)
src/hardware/: button.cpp  button.h  led.cpp  led.h  microphone.cpp  microphone.h
src/network/: ha_light.cpp  ha_light.h  ha_time.cpp  ha_time.h  mqtt_config.h  mqtt_service.cpp  mqtt_service.h  ota_service.cpp  ota_service.h  upd_service.cpp  upd_service.h  web_service.cpp  web_service.h  wifi_config.h  wifi_service.cpp  wifi_service.h
src/notification/: button_renderer.cpp  button_renderer.h  controller.cpp  controller.h  dimmer.cpp  dimmer.h  indicator_renderer.cpp  indicator_renderer.h  overlay.cpp  overlay.h  quiet_hours.h  render_utils.h  system_renderer.cpp  system_renderer.h  types.h  user_renderer.cpp  user_renderer.h  user_state.cpp  user_state.h
src/storage/: eeprom_layout.h  eeprom_store.cpp  eeprom_store.h  settings_repository.cpp  settings_repository.h
src/text/: font_5x8.h  running_text.cpp  running_text.h  text_renderer.cpp  text_renderer.h
src/time/: time_service.cpp  time_service.h
src/util/: fade_animator.cpp  fade_animator.h  fast_filter.h  fft.h  loop_profiler.cpp  loop_profiler.h  periodic_timer.h  string_utils.h  timer.h  vol_analyzer.h
